# rust-konect

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  chat.rs  database.rs  error.rs  main.rs  models.rs  websocket.rs  xmpp_bridge.rs
frontend/: index.html
frontend/static/: app.js  style.css
