[workspace]
resolver = "2"
members = [
    "backend"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
axum = { version = "0.7", features = ["ws", "multipart"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
xmpp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
mime_guess = "2.0"